--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,18 @@
+* {
+  box-sizing: border-box;
+  color: #F5DB8F;
+}
 
+
+@font-face {
+  font-family: 'EvilEmpire';
+  src: local('EvilEmpire'),
+    url('./Fonts/EvilEmpire-4BBVK.ttf') format('woff')
+}
+
+.EEfont {
+  font-family: 'EvilEmpire';
+}
 
 .container {
   min-width: 100%;
@@ -25,3 +39,204 @@
 .MetalBands {
   position: relative;
 }
+
+.Band {
+  height: 300px;
+  width: 600px;
+  border: 1px solid #000;
+  margin: 30px auto;
+  
+}
+/*
+.grid {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: auto;
+  gap: 0;
+}
+
+.gridItem {
+  grid-column: span 1;
+  grid-row: span 1;
+}
+
+.BandHero {
+  height: 300px;
+  width: 300px;
+  border: 1px solid #000;
+  background-color: #ccc;
+}
+*/
+.BandData {
+  /* height: 300px;
+  width: 300px;
+  border: 1px solid #000; */
+  transform: rotateY(180deg);
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-content: center;
+  justify-content: center;
+  align-items: center;
+  font-size: 1.3em;
+}
+
+.BandName {
+  color: #000;
+  font-size: 2em;
+}
+
+
+
+.brandHeroImg {
+  width: 100%;
+  height: 100%;
+}
+
+.wrapper {
+  position: relative;
+  height: 350px;
+  width: 700px;
+  margin: 120px auto;
+}
+
+body {
+  background-color: #0E0E0E;
+}
+.book {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  margin: auto;
+  /* width: 18.5rem;
+  height: 12.5rem; */
+  width: 700px;
+  height: 350px; 
+
+  perspective: 70rem;
+}
+.cover {
+  background-color: #F5DB8F;
+  transform: rotateY(0deg);
+  /* width: 9.25rem;
+  height: 12.5rem; */
+  width: 350px;
+  height: 350px;
+
+  color: #000;
+  display: flex;
+  align-self: center;
+  align-content: center;
+  justify-content: center;
+  align-items: center;
+  font-family: 'EvilEmpire';
+  font-size: 2em;
+}
+.page {
+  /* top: 0.25rem;
+  left: 0.25rem; */
+  background-color: #000;
+  transform: rotateY(0deg);
+  /* width: 9rem;
+  height: 12rem; */
+
+  width: 350px;
+  height: 350px;
+
+  text-align: right;
+  font-size: 8px;
+  color: #777;
+
+  
+  border: 1px solid #F5DB8F;
+}
+
+.cover, .page {
+  position: absolute;
+  padding: 1rem;
+  transform-origin: 100% 0;
+  /* border-radius: 5px 0 0 5px; */
+  box-shadow: inset 3px 0px 20px rgba(0, 0, 0, 0.2),
+    0px 0px 15px rgba(0, 0, 0, 0.1);
+  box-sizing: border-box;
+}
+.cover.turn {
+  animation: bookCover 3s forwards;
+  position: relative;
+}
+.page.turn {
+  animation: bookOpen 3s forwards;
+}
+.page:nth-of-type(1) {
+  animation-delay: 0.05s;
+} 
+@keyframes bookOpen {
+  30% { z-index: 999 }
+  100% {  transform: rotateY(180deg);
+    z-index: 999;}
+}
+@keyframes bookCover {
+  30% { z-index: 999 }
+  100% {  transform: rotateY(180deg);
+    z-index: 1;}
+}
+@keyframes bookOpen150deg {
+  30% { z-index: 999 }
+  100% {  transform: rotateY(150deg);
+    z-index: 999;}
+}
+@keyframes bookOpen55deg {
+  30% { z-index: 999 }
+  100% {  transform: rotateY(55deg);
+    z-index: 999;}
+}
+@keyframes bookOpen30deg {
+  50% { z-index: 999 }
+  100% {  transform: rotateY(30deg);
+    z-index: 999;}
+}
+
+
+.CornerPadding  {
+  padding: 15px;
+  box-sizing: content-box;
+}
+
+.CornerBottomRight {
+  position: absolute;
+  bottom: -15px;
+  right: -15px;
+  transform: rotateX(180deg);
+  height: 75px;
+  width: 75px;
+}
+
+.CornerBottomLeft {
+  position: absolute;
+  bottom: -15px;
+  left: -15px;
+  transform: rotate(180deg);
+  height: 75px;
+  width: 75px;
+}
+
+.CornerTopRight {
+  position: absolute;
+  top: -15px;
+  right: -15px;
+  transform: rotateX(0deg);
+  height: 75px;
+  width: 75px;
+}
+
+.CornerTopLeft {
+  position: absolute;
+  top: -15px;
+  left: -15px;
+  transform: rotateY(180deg);
+  height: 75px;
+  width: 75px;
+}
+
